# tp3-ufmg-recomendador

./: .gitignore  README.md  pyproject.toml  read.me  requirements.txt
artigo/: artigo_tp3.aux  artigo_tp3.out  artigo_tp3.tex
data/: dificuldade_engsis.csv  disciplinas_engsis.json
notebooks/: TP3_Classificador_Disciplinas_UFMG.ipynb  TP3_Colab.ipynb  TP3_Notebook_Final.ipynb
scripts/: build_discipline_data.py
src/: __init__.py  baseline_no_text.py  config.py  data_curation.py  demo_gradio.py  demo_streamlit.py  evaluate.py  recommender_rules.py  sbert_encoder.py  scraping.py  synthetic_profile_generator.py  train_bert_classifier.py
src/tp3_ufmg_recomendador.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
streamlit_app/: README.md  app.py  requirements.txt
streamlit_app/data/: disciplinas_engsis.json
streamlit_app/src/: config.py  data_curation.py  demo_streamlit.py  sbert_encoder.py
